--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>beyond-commons</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
     <packaging>jar</packaging>
     <url>http://www.beyond.com</url>
     <inceptionYear>2020-Now</inceptionYear>
@@ -19,7 +19,7 @@
         <connection>scm:git:http://192.168.137.101:8080/beyond/beyond-commons.git</connection>
         <developerConnection>scm:git:http://192.168.137.101:8080/beyond/beyond-commons.git</developerConnection>
         <url>http://192.168.137.101:8080/beyond/beyond-commons</url>
-      <tag>HEAD</tag>
+      <tag>1.0.0.RELEASE</tag>
   </scm>
 
     <licenses>
